# CppConsole

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
CppConsole_Example/: CMakeLists.txt
CppConsole_Example/src/: main.cpp
src/: console.cpp  console.h
src/console/: console.cpp  console.h
srcTest/: main.cpp
